--- a/pagina3.html
+++ b/pagina3.html
@@ -40,10 +40,13 @@
     </header>
 
 
+    <div class="barra-especificaçoes">
+        <p><strong>Home</strong> / Produtos / Tênis / Nike / Tênis Nike Revolution 6 Next Nature Masculino</p>
+    </div>
+
+
     <div class="div-do-tenis">
-        <div class="barra-especificaçoes">
-            <p><strong>Home</strong> / Produtos / Tênis / Nike / Tênis Nike Revolution 6 Next Nature Masculino</p>
-        </div>
+
         <div class="especificacoes">
             <div class="view-do-produto">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -52,7 +55,7 @@
                             <img src="images/tenis carrossel.png" alt="...">
                         </div>
                         <div class="carousel-item slide2">
-                            <img class="imagem_carrossel_2" src="images/tenis carrossel.png" alt="..." ">
+                            <img class="imagem_carrossel_2" src="images/tenis carrossel.png" alt="...">
                         </div>
                         <div class=" carousel-item slide3">
                             <img class="imagem_carrossel_3" src="images/tenis carrossel.png" alt="...">
@@ -78,24 +81,89 @@
             </div>
         </div>
         <div class="detalhes-tenis">
-            <h1>Tênis Nike Revolution 6 Next Nature Masculino</h1>
-            <p>Casual | Nike | REF:38416711</p>
+            <h1>Tênis Nike Revolution <br>
+                6 Next Nature Masculino</h1>
+            <p class="texto_detalhes_tenis">Casual | Nike | REF:38416711</p>
             <div class="estrlas">
                 <img src="images/Stars.png" alt="">
+                <p class="avaliacao">4.7 <img src="images/Star 1.png" alt=""></p>
+                <p class="texto_detalhes_tenis">(90 avaliações )</p>
             </div>
-        </div>
 
+        </div>
     </div>
 
 
 
+    <div class="imagenszinhas" style="display: flex;">
+        <div><img class="imagen1" src="images/Teniskswiss.png" alt=""></div>
+        <div><img class="imagen2" src="images/Teniskswiss.png" alt=""></div>
+        <div><img class="imagen3" src="images/Teniskswiss.png" alt=""></div>
+        <div><img class="imagen4" src="images/Teniskswiss.png" alt=""></div>
+        <div><img class="imagen5" src="images/Teniskswiss.png" alt=""></div>
+    </div>
 
 
+    <section class="produtos_relacionados">
+        <div>
+            <div class="titulo_produtos_relacionados">
+                <h1 class="h1_produtos_relacionados">Produtos Relacionados</h1>
+                <div><a class="link_produtos_relacionados" href="">Ver Todos
+                        <img src="images/seta.png" alt=""></a>
+                </div>
+            </div>
 
+            <div class="produto_1">
+                <div class="card" style="width: 18rem;">
+                    <a href="#"> <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                        <div class="card-body body_produto_1">
+                            <p class="promoçao_produto_1">30% OFF</p>
+                            <p class="card-text texto_produto_1">K-Swiss V8 - Masculino</p>
+                    </a>
+                    <div class="presos">
+                        <p class="valor_produto_1">R$ 200</p>
+                        <p class="descontos">R$ 100</p>
+                    </div>
+                </div>
+            </div>
 
+            <div class="card" style="width: 18rem;">
+                <a href="#"> <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                    <div class="card-body body_produto_1">
+                        <p class="promoçao_produto_1">30% OFF</p>
+                        <p class="card-text texto_produto_1">K-Swiss V8 - Masculino</p>
+                </a>
+                <div class="presos">
+                    <p class="valor_produto_1">R$ 200</p>
+                    <p class="descontos">R$ 100</p>
+                </div>
+            </div>
+        </div>
 
+        <div class="card" style="width: 18rem;">
+            <a href="#"> <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                <div class="card-body body_produto_1">
+                    <p class="card-text texto_produto_1">K-Swiss V8 - Masculino</p>
+            </a>
+            <div class="presos">
+                <p class="valor_produto_1">R$ 200</p>
+                <p class="descontos">R$ 100</p>
+            </div>
+        </div>
+        </div>
 
+        <div class="card" style="width: 18rem;">
+            <a href="#"> <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                <div class="card-body body_produto_1">
+                    <p class="card-text texto_produto_1">K-Swiss V8 - Masculino</p>
+            </a>
+            <div class="presos">
+                <p class="valor_produto_1">R$ 200</p>
+                <p class="descontos">R$ 100</p>
+            </div>
+        </div>
 
+    </section>
 
     <footer>
 
