pagina 3 quase finalizada

--- a/pagina3.html
+++ b/pagina3.html
@@ -89,20 +89,48 @@
                 <p class="avaliacao">4.7 <img src="images/Star 1.png" alt=""></p>
                 <p class="texto_detalhes_tenis">(90 avaliações )</p>
             </div>
+            <div class="preco_detalhes-tenis">
+                <p class="preco_detalhes-tenis_promocao">R$ 219,00</p>
+                <p class="preco_detalhes-tenis_real">R$ 300</p>
+            </div>
 
+            <p class="texto_descricao_tenis">Descrição do produto</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt ut labore
+                et
+                dolore magna aliqua. Ut <br> enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+
+            <h5 class="titulo_detalhes_tenis">Tamanho</h5>
+
+            <div class="tamanho_detalhes-tenis">
+                <button>39</button>
+                <button>40</button>
+                <button>41</button>
+                <button>42</button>
+                <button>43</button>
+            </div>
+
+            <h5 class="tilulo_cor_detalhes-tenis">Cor</h5>
+
+            <div class="cor_detalhes-tenis">
+                <div class="botoes_detalhes-tenis">
+                    <button class="cor_button1"></button>
+                    <button class="cor_button2"></button>
+                    <button class="cor_button3"></button>
+                    <button class="cor_button4"></button>
+                </div>
+            </div>
+            <button class="botao_comprar_detalhes-tenis">COMPRAR</button>
         </div>
     </div>
 
-
-
     <div class="imagenszinhas" style="display: flex;">
-        <div><img class="imagen1" src="images/Teniskswiss.png" alt=""></div>
-        <div><img class="imagen2" src="images/Teniskswiss.png" alt=""></div>
-        <div><img class="imagen3" src="images/Teniskswiss.png" alt=""></div>
-        <div><img class="imagen4" src="images/Teniskswiss.png" alt=""></div>
-        <div><img class="imagen5" src="images/Teniskswiss.png" alt=""></div>
+        <div><img class="imagem1" src="images/Teniskswiss.png" alt=""></div>
+        <div><img class="imagem2" src="images/Teniskswiss.png" alt=""></div>
+        <div><img class="imagem3" src="images/Teniskswiss.png" alt=""></div>
+        <div><img class="imagem4" src="images/Teniskswiss.png" alt=""></div>
+        <div><img class="imagem5" src="images/Teniskswiss.png" alt=""></div>
     </div>
-
 
     <section class="produtos_relacionados">
         <div>
@@ -112,7 +140,6 @@
                         <img src="images/seta.png" alt=""></a>
                 </div>
             </div>
-
             <div class="produto_1">
                 <div class="card" style="width: 18rem;">
                     <a href="#"> <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
@@ -126,7 +153,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="card" style="width: 18rem;">
                 <a href="#"> <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                     <div class="card-body body_produto_1">
@@ -139,7 +165,6 @@
                 </div>
             </div>
         </div>
-
         <div class="card" style="width: 18rem;">
             <a href="#"> <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                 <div class="card-body body_produto_1">
@@ -151,7 +176,6 @@
             </div>
         </div>
         </div>
-
         <div class="card" style="width: 18rem;">
             <a href="#"> <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                 <div class="card-body body_produto_1">
@@ -168,7 +192,6 @@
     <footer>
 
         <div class="sera">
-
             <div class="logod">
                 <img src="images/logo digital.png" alt="">
 
@@ -177,16 +200,12 @@
                         <br>incididunt ut labore et dolore.
                     </p>
                 </div>
-
-
                 <div class="logos">
                     <a href=""><img src="images/logo facebook.png" alt=""></a>
                     <a href=""><img src="images/logo instagram.png" alt=""></a>
                     <a href=""><img src="images/logo twitter.png" alt=""></a>
                 </div>
-
             </div>
-
             <div class="informaçao">
                 <h3>Informação</h3>
                 <p>Sobre Drip Store</p>
@@ -195,9 +214,7 @@
                 <p>Blog</p>
                 <p>Trabalhe conosco</p>
                 <p>Meus Pedidos</p>
-
             </div>
-
             <div class="categoria">
                 <h3 class="h3tit">Categorias</h3>
                 <p>Camisetas</p>
@@ -212,7 +229,6 @@
                 <p>(85) 3051-3411</p>
             </div>
         </div>
-
         <div class="divFinal">
             <hr style="min-width: 1240px; width: 16px 0px 23px;margin-bottom: 23px;background-color: #ffffff4d;">
             <p class="copy"> &copy; 2025 Digital College</p>
