--- a/pagina3.html
+++ b/pagina3.html
@@ -78,8 +78,16 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
+                <div class="imagenszinhas">
+                    <div><img class="imagem1" src="images/Teniskswiss.png" alt=""></div>
+                    <div><img class="imagem2" src="images/Teniskswiss.png" alt=""></div>
+                    <div><img class="imagem3" src="images/Teniskswiss.png" alt=""></div>
+                    <div><img class="imagem4" src="images/Teniskswiss.png" alt=""></div>
+                    <div><img class="imagem5" src="images/Teniskswiss.png" alt=""></div>
+                </div>
             </div>
         </div>
+
         <div class="detalhes-tenis">
             <h1>Tênis Nike Revolution <br>
                 6 Next Nature Masculino</h1>
@@ -124,13 +132,7 @@
         </div>
     </div>
 
-    <div class="imagenszinhas" style="display: flex;">
-        <div><img class="imagem1" src="images/Teniskswiss.png" alt=""></div>
-        <div><img class="imagem2" src="images/Teniskswiss.png" alt=""></div>
-        <div><img class="imagem3" src="images/Teniskswiss.png" alt=""></div>
-        <div><img class="imagem4" src="images/Teniskswiss.png" alt=""></div>
-        <div><img class="imagem5" src="images/Teniskswiss.png" alt=""></div>
-    </div>
+
 
     <section class="produtos_relacionados">
         <div>
@@ -186,6 +188,9 @@
                 <p class="descontos">R$ 100</p>
             </div>
         </div>
+    
+
+
 
     </section>
 
