--- a/pagina3.html
+++ b/pagina3.html
@@ -39,11 +39,9 @@
         </div>
     </header>
 
-
-    <div class="barra-especificaçoes">
-        <p><strong>Home</strong> / Produtos / Tênis / Nike / Tênis Nike Revolution 6 Next Nature Masculino</p>
-    </div>
-
+<div class="barra-especificaçoes">
+            <p><strong>Home</strong> / Produtos / Tênis / Nike / Tênis Nike Revolution 6 Next Nature Masculino</p>
+        </div>
 
     <div class="div-do-tenis">
 
@@ -121,7 +119,7 @@
             <h5 class="tilulo_cor_detalhes-tenis">Cor</h5>
 
             <div class="cor_detalhes-tenis">
-                <div class="botoes_detalhes-tenis">
+                <div class="botoes_detalhes-tenis_cor">
                     <button class="cor_button1"></button>
                     <button class="cor_button2"></button>
                     <button class="cor_button3"></button>
@@ -188,7 +186,7 @@
                 <p class="descontos">R$ 100</p>
             </div>
         </div>
-    
+
 
 
 
