--- a/pagina3.html
+++ b/pagina3.html
@@ -42,10 +42,11 @@
         <div class="barra-especificaçoes">
             <p><strong>Home</strong> / Produtos / Tênis / Nike / Tênis Nike Revolution 6 Next Nature Masculino</p>
         </div>
+
         <div class="especificacoes">
             <div class="view-do-produto">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner w-100">
+                    <div class="carousel-inner" style="width: 700px; height: 500px;">
                         <div class="carousel-item active">
                             <img src="images/tenis carrossel.png" class="d-block w-100 carrossel-image" alt="...">
                         </div>
@@ -70,12 +71,12 @@
                     </button>
                 </div>
             </div>
-        </div>
-        <div class="detalhes-tenis">
-            <h1>Tênis Nike Revolution 6 Next Nature Masculino</h1>
-            <p>Casual | Nike | REF:38416711</p>
-            <div class="estrlas">
-                <img src="images/Stars.png" alt="">
+            <div class="detalhes-tenis">
+                <h1>Tênis Nike Revolution 6 Next Nature Masculino</h1>
+                <p>Casual | Nike | REF:38416711</p>
+                <div class="estrlas">
+                    <img src="images/Stars.png" alt="">
+                </div>
             </div>
         </div>
 
